--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
-<html>
+<!DOCTYPE html>
+
+
 <script src='https://d3js.org/d3.v5.min.js'></script>
+
 <style> circle {fill: lightblue; stroke: black;} </style>
 <body onload='init()'>
 <svg width=300 height=300>
 </svg>
+
+<h1 class="tab"> Population Distribution and Demography </h1>
+
+<h3 class="tab"> Introduction </h3>
+  
+<p class="tab">
+  The following martini glass narrative vizualization is an exploration of the population distributions of select countries and regions. The datasets were collected from populationpyramid.net and provide insight into demographies spanning historical records from 1950 to projections in 2050.
+</p>
+
+<p class="tab">
+  Below is representation of the population distribution of the United States in the year 1950. The population is separated into cohorts distinguished by age. Each age cohort is labeled by the youngest age in the 5-year cohort. Additionally, each cohort is split by sex as represented by male in blue and female in red. By placing the bars side-by-side rather than opposite each other as done in traditional population pyramids, a male-female population imbalance is easier to observe.
+</p>
+
+<p class="tab">
+  <input type="button" onclick="location.href='page2.html';" value="Continue" />
+</p>
+
+
 <script>
 async function init() {
 
@@ -38,11 +59,9 @@ d3.select("svg").append("g")
                     );
 
 
-
-
-
-
 }
 </script>
+
+
 </body>
-</html>
+
