--- a/index.html
+++ b/index.html
@@ -1,67 +1,167 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
+<style>
 
-
-<script src='https://d3js.org/d3.v5.min.js'></script>
-
-<style> circle {fill: lightblue; stroke: black;} </style>
-<body onload='init()'>
-<svg width=300 height=300>
-</svg>
-
-<h1 class="tab"> Population Distribution and Demography </h1>
-
-<h3 class="tab"> Introduction </h3>
-  
-<p class="tab">
-  The following martini glass narrative vizualization is an exploration of the population distributions of select countries and regions. The datasets were collected from populationpyramid.net and provide insight into demographies spanning historical records from 1950 to projections in 2050.
-</p>
-
-<p class="tab">
-  Below is representation of the population distribution of the United States in the year 1950. The population is separated into cohorts distinguished by age. Each age cohort is labeled by the youngest age in the 5-year cohort. Additionally, each cohort is split by sex as represented by male in blue and female in red. By placing the bars side-by-side rather than opposite each other as done in traditional population pyramids, a male-female population imbalance is easier to observe.
-</p>
-
-<p class="tab">
-  <input type="button" onclick="location.href='page2.html';" value="Continue" />
-</p>
-
-
-<script>
-async function init() {
-
-const data = await d3.csv('https://flunky.github.io/cars2017.csv');
-
-var x = d3.scaleLog().domain([10, 150]).range([ 0,  200]);
-var y = d3.scaleLog().domain([10, 150]).range([200, 0]);
-
-d3.select('svg')
-    .append("g")
-    .attr("transform","translate(50,50)")
-    .selectAll("dot")
-    .data(data)
-    .enter().append("circle")
-    .attr("cx", function (d) { return x(d.AverageCityMPG);})
-    .attr("cy", function (d) { return y(d.AverageHighwayMPG);})
-    .attr("r", function (d) {return 2 + Number.parseInt(d.EngineCylinders); })
-
-d3.select("svg").append("g")
-            .attr("transform", "translate(50,50)")
-            .call(d3.axisLeft(y)
-                    .tickValues([10, 20, 50, 100])  
-                    .tickFormat(d3.format("~s"))
-                    );
-
-
-d3.select("svg").append("g")
-            .attr("transform", "translate(50,250)")
-            .call(d3.axisBottom(x)
-                    .tickValues([10, 20, 50, 100])  
-                    .tickFormat(d3.format("~s"))
-                    );
-
-
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  position: relative;
+  width: 1200px;
 }
+
+.axis text {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.bar {
+  fill: steelblue;
+}
+
+.bar:hover {
+  fill: brown;
+}
+
+.x.axis path {
+  display: none;
+}
+
+label {
+  position: absolute;
+  top: 10px;
+  right: 500px;
+}
+
+</style>
+<body onload='init()'>
+<svg width="1200" height="550" id="note"></svg>
+<label><input type="checkbox"> Cases Sort in Descending </label>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
+<script>
+
+var svg = d3.select("svg"),
+    margin = {top: 20, right: 20, bottom: 30, left: 100},
+    width = +svg.attr("width") - margin.left - margin.right,
+    height = +svg.attr("height") - margin.top - margin.bottom;
+
+var x = d3.scaleBand().rangeRound([0, width]).padding(0.1),
+    y = d3.scaleLinear().rangeRound([height, 0]);
+
+var g = svg.append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.csv("data2022.csv", function(d) {
+  d.cases = +d.cases;
+  return d;
+}, function(error, data) {
+  if (error) throw error;
+
+  x.domain(data.map(function(d) { return d.state; }));
+  y.domain([0, d3.max(data, function(d) { return d.cases; })]);
+
+  g.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(d3.axisBottom(x));
+
+  g.append("g")
+      .attr("class", "y axis")
+      .call(d3.axisLeft(y).ticks(10))
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", margin.left+20)
+      .attr("x", margin.top)
+      .attr("text-anchor", "end")
+      .text("Cases");
+
+  g.selectAll(".bar")
+    .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.state); })
+      .attr("y", function(d) { return y(d.cases); })
+      .attr("width", x.bandwidth())
+      .attr("height", function(d) { return height - y(d.cases); })
+      .append("title") 
+	  	.text((d) => `cases: ${d.cases}`); 
+
+d3.select("input").on("change", change);
+
+var sortTimeout = setTimeout(function() {
+  d3.select("input").property("checked", true).each(change);
+}, 2000);
+
+function change() {
+  clearTimeout(sortTimeout);
+
+  // Copy-on-write since tweens are evaluated after a delay.
+  var x0 = x.domain(data.sort(this.checked
+      ? function(a, b) { return b.cases - a.cases; }
+      : function(a, b) { return d3.ascending(a.state, b.state); })
+      .map(function(d) { return d.state; }))
+      .copy();
+
+  svg.selectAll(".bar")
+      .sort(function(a, b) { return x0(a.state) - x0(b.state); });
+
+  var transition = svg.transition().duration(750),
+      delay = function(d, i) { return i * 25; };
+
+  transition.selectAll(".bar")
+      .delay(delay)
+      .attr("x", function(d) { return x0(d.state); });
+
+  transition.select(".x.axis")
+      .call(d3.axisBottom(x))
+    .selectAll("g")
+      .delay(delay);
+}
+
+const annotations = [
+  {
+    note: {
+      label: "cases > 3 M",
+      title: ""
+    },
+    x: margin.left,
+    y: margin.top + 5/11 * height ,
+    dy: 0,
+    dx: 1000
+  }
+]
+
+const makeAnnotations = d3.annotation()
+  .annotations(annotations)
+d3.select("#note")
+  .append("g")
+  .call(makeAnnotations)
+
+
+    });
+
 </script>
 
 
-</body>
+<h1 class="tab"> 01-01-2022 US Covid Cases by 50 States </h1>
 
+<h3 class="tab"> Bar Chart, checkbox to select soring in decending(select) or alphabetical(unselect) </h3>
+  
+<p class="tab">
+	CA has the highest Covid case number. 
+</p>
+
+<p class="tab">
+	CA, TX, FL, and NY have over 3 M confirmed Covid cases. 
+</p>
+
+<p class="tab">
+  <input type="button" onclick="location.href='page2.html';" value="Continue to Page 2: Death Number" />
+</p>
+
+</body>
