--- a/page2.html
+++ b/page2.html
@@ -38,9 +38,11 @@ label {
 }
 
 </style>
-<svg width="1200" height="550"></svg>
-<label><input type="checkbox"> Cases Sort in Ascending </label>
+<body onload='init()'>
+<svg width="1200" height="550" id="note"></svg>
+<label><input type="checkbox"> Death Number Sort in Descending </label>
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
 <script>
 
 var svg = d3.select("svg"),
@@ -54,14 +56,14 @@ var x = d3.scaleBand().rangeRound([0, width]).padding(0.1),
 var g = svg.append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.csv("data.csv", function(d) {
-  d.cases = +d.cases;
+d3.csv("data2022.csv", function(d) {
+  d.deaths = +d.deaths;
   return d;
 }, function(error, data) {
   if (error) throw error;
 
   x.domain(data.map(function(d) { return d.state; }));
-  y.domain([0, d3.max(data, function(d) { return d.cases; })]);
+  y.domain([0, d3.max(data, function(d) { return d.deaths; })]);
 
   g.append("g")
       .attr("class", "x axis")
@@ -73,8 +75,8 @@ d3.csv("data.csv", function(d) {
       .call(d3.axisLeft(y).ticks(10))
     .append("text")
       .attr("transform", "rotate(-90)")
-      .attr("y", -margin.left+20)
-      .attr("x", -margin.top)
+      .attr("y", margin.left+20)
+      .attr("x", margin.top)
       .attr("text-anchor", "end")
       .text("Cases");
 
@@ -83,10 +85,11 @@ d3.csv("data.csv", function(d) {
     .enter().append("rect")
       .attr("class", "bar")
       .attr("x", function(d) { return x(d.state); })
-      .attr("y", function(d) { return y(d.cases); })
+      .attr("y", function(d) { return y(d.deaths); })
       .attr("width", x.bandwidth())
-      .attr("height", function(d) { return height - y(d.cases); });
-
+      .attr("height", function(d) { return height - y(d.deaths); })
+      .append("title") 
+	  	.text((d) => `death number: ${d.deaths}`);
 
 d3.select("input").on("change", change);
 
@@ -99,7 +102,7 @@ function change() {
 
   // Copy-on-write since tweens are evaluated after a delay.
   var x0 = x.domain(data.sort(this.checked
-      ? function(a, b) { return b.cases - a.cases; }
+      ? function(a, b) { return b.deaths - a.deaths; }
       : function(a, b) { return d3.ascending(a.state, b.state); })
       .map(function(d) { return d.state; }))
       .copy();
@@ -108,7 +111,7 @@ function change() {
       .sort(function(a, b) { return x0(a.state) - x0(b.state); });
 
   var transition = svg.transition().duration(750),
-      delay = function(d, i) { return i * 50; };
+      delay = function(d, i) { return i * 25; };
 
   transition.selectAll(".bar")
       .delay(delay)
@@ -120,29 +123,49 @@ function change() {
       .delay(delay);
 }
 
+const annotations = [
+  {
+    note: {
+      label: "death > 50 k",
+      title: ""
+    },
+    x: margin.left,
+    y: margin.top + 2.7/7.7 * height ,
+    dy: 0,
+    dx: 1000
+  }
+]
+
+const makeAnnotations = d3.annotation()
+  .annotations(annotations)
+d3.select("#note")
+  .append("g")
+  .call(makeAnnotations)
+
+
     });
 
 </script>
 
 
-<h1 class="tab"> Population Distribution and Demography </h1>
+<h1 class="tab"> 01-01-2022 US Covid Death Number by 50 States </h1>
 
-<h3 class="tab"> United States Baby Boomers & Millennials </h3>
+<h3 class="tab"> Bar Chart, checkbox to select soring in decending(select) or alphabetical(unselect) </h3>
   
 <p class="tab">
-	In the 2000's the United States had a very favorable demographic structure. 
+	CA has the highest Covid death number. 
 </p>
 
 <p class="tab">
-	In many countries around the world, including the United States, 
+	CA, TX, FL, and NY have over 50 k Covid death numbers. 
 </p>
 
 
 <p class="tab">
-  <input type="button" onclick="location.href='index.html';" value="Back" />
-  <input type="button" onclick="location.href='page3.html';" value="Continue" />
+  <input type="button" onclick="location.href='index.html';" value="Back to Page 1: Cases Number" />
+  <input type="button" onclick="location.href='page3.html';" value="Continue to Page 3: Deathrate" />
 </p>
 
-
+</body>
 
 
