--- a/page3.html
+++ b/page3.html
@@ -1,30 +1,171 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
+<style>
 
-<link rel="stylesheet" href="style.css">
-<script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="scripts.js"></script>
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  position: relative;
+  width: 1200px;
+}
 
-<body>
+.axis text {
+  font: 10px sans-serif;
+}
 
-<h1 class="tab"> Population Distribution and Demography </h1>
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
 
-<h3 class="tab"> China's Demography </h3>
+.bar {
+  fill: steelblue;
+}
+
+.bar:hover {
+  fill: brown;
+}
+
+.x.axis path {
+  display: none;
+}
+
+label {
+  position: absolute;
+  top: 10px;
+  right: 500px;
+}
+
+</style>
+<body onload='init()'>
+<svg width="1200" height="550" id="note"></svg>
+<label><input type="checkbox"> Deathrate Sort in Descending </label>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
+<script>
+
+var svg = d3.select("svg"),
+    margin = {top: 20, right: 20, bottom: 30, left: 100},
+    width = +svg.attr("width") - margin.left - margin.right,
+    height = +svg.attr("height") - margin.top - margin.bottom;
+
+var x = d3.scaleBand().rangeRound([0, width]).padding(0.1),
+    y = d3.scaleLinear().rangeRound([height, 0]);
+
+var g = svg.append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.csv("data2022.csv", function(d) {
+  d.deathrate = +d.deathrate;
+  return d;
+}, function(error, data) {
+  if (error) throw error;
+
+  x.domain(data.map(function(d) { return d.state; }));
+  y.domain([0, d3.max(data, function(d) { return d.deathrate; })]);
+
+  g.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(d3.axisBottom(x));
+  
+var formatPercent = d3.format(".1%");
+
+  g.append("g")
+      .attr("class", "y axis")
+      .call(d3.axisLeft(y).ticks(12).tickFormat(formatPercent))
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", margin.left+20)
+      .attr("x", margin.top)
+      .attr("text-anchor", "end")
+      .text("Cases");
+
+  g.selectAll(".bar")
+    .data(data)
+    .enter().append("rect")
+      .attr("class", "bar")
+      .attr("x", function(d) { return x(d.state); })
+      .attr("y", function(d) { return y(d.deathrate); })
+      .attr("width", x.bandwidth())
+      .attr("height", function(d) { return height - y(d.deathrate); })
+	  .append("title") 
+	  	.text((d) => `deathrate: ${d.deathrate}`);
+
+		
+d3.select("input").on("change", change);
+
+var sortTimeout = setTimeout(function() {
+  d3.select("input").property("checked", true).each(change);
+}, 2000);
+
+function change() {
+  clearTimeout(sortTimeout);
+
+  // Copy-on-write since tweens are evaluated after a delay.
+  var x0 = x.domain(data.sort(this.checked
+      ? function(a, b) { return b.deathrate - a.deathrate; }
+      : function(a, b) { return d3.ascending(a.state, b.state); })
+      .map(function(d) { return d.state; }))
+      .copy();
+
+  svg.selectAll(".bar")
+      .sort(function(a, b) { return x0(a.state) - x0(b.state); });
+
+  var transition = svg.transition().duration(750),
+      delay = function(d, i) { return i * 25; };
+
+  transition.selectAll(".bar")
+      .delay(delay)
+      .attr("x", function(d) { return x0(d.state); });
+
+  transition.select(".x.axis")
+      .call(d3.axisBottom(x))
+    .selectAll("g")
+      .delay(delay);
+}
+
+const annotations = [
+  {
+    note: {
+      label: " > 1%",
+      title: ""
+    },
+    x: margin.left,
+    y: margin.top + 4.8/10 * height ,
+    dy: 0,
+    dx: 1050
+  }
+]
+
+const makeAnnotations = d3.annotation()
+  .annotations(annotations)
+d3.select("#note")
+  .append("g")
+  .call(makeAnnotations)
+
+
+    });
+
+</script>
+
+
+<h1 class="tab"> 01-01-2022 US Covid Deathrate by 50 States </h1>
+
+<h3 class="tab"> Bar Chart, checkbox to select soring in decending(select) or alphabetical(unselect) </h3>
   
 <p class="tab">
-	Below is China's demography in 2020. Due to the one-child policy, an unsuprising drop in the number of children can be seen. In conjunction with the drop in fetility rates due to modernization, the country is experiencing insufficient young parents to repopulate. This means the Chinese consumption boom is at its peak too; there will be fewer future consumers.
+	MS has the highest deathrate. 
 </p>
 
 <p class="tab">
-	Additionally, China is strongly patriarchal thus the one-child policy resulted in a large degree of sex-selective abortion. This is resulting in a massive male-female imbalance which feeds back into less couples and smaller future generations. Future projections of China's demography indicates economic strain as the elderly population begins to outpace the working population. Click continue to explore the data.
+	Most of the states have over 1% deathrate. 
 </p>
 
 
 <p class="tab">
-  <input type="button" onclick="location.href='page2.html';" value="Back" />
-</p>
-
-<p class="tab">
-	<img src="images/china-1.png" alt="HTML5 Icon" style="width:1000px;height:495px;">
+  <input type="button" onclick="location.href='page2.html';" value="Back to Page 2: Death Number" />
 </p>
 
 </body>
