--- a/page2.html
+++ b/page2.html
@@ -40,7 +40,7 @@ label {
 </style>
 <body onload='init()'>
 <svg width="1200" height="550" id="note"></svg>
-<label><input type="checkbox"> Cases Sort in Descending </label>
+<label><input type="checkbox"> Death Number Sort in Descending </label>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
 <script>
@@ -57,13 +57,13 @@ var g = svg.append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 d3.csv("data2022.csv", function(d) {
-  d.cases = +d.cases;
+  d.deaths = +d.deaths;
   return d;
 }, function(error, data) {
   if (error) throw error;
 
   x.domain(data.map(function(d) { return d.state; }));
-  y.domain([0, d3.max(data, function(d) { return d.cases; })]);
+  y.domain([0, d3.max(data, function(d) { return d.deaths; })]);
 
   g.append("g")
       .attr("class", "x axis")
@@ -85,11 +85,11 @@ d3.csv("data2022.csv", function(d) {
     .enter().append("rect")
       .attr("class", "bar")
       .attr("x", function(d) { return x(d.state); })
-      .attr("y", function(d) { return y(d.cases); })
+      .attr("y", function(d) { return y(d.deaths); })
       .attr("width", x.bandwidth())
-      .attr("height", function(d) { return height - y(d.cases); })
+      .attr("height", function(d) { return height - y(d.deaths); })
       .append("title") 
-	  	.text((d) => `cases: ${d.cases}`); 
+	  	.text((d) => `death number: ${d.deaths}`);
 
 d3.select("input").on("change", change);
 
@@ -102,7 +102,7 @@ function change() {
 
   // Copy-on-write since tweens are evaluated after a delay.
   var x0 = x.domain(data.sort(this.checked
-      ? function(a, b) { return b.cases - a.cases; }
+      ? function(a, b) { return b.deaths - a.deaths; }
       : function(a, b) { return d3.ascending(a.state, b.state); })
       .map(function(d) { return d.state; }))
       .copy();
@@ -126,11 +126,11 @@ function change() {
 const annotations = [
   {
     note: {
-      label: "cases > 3 M",
+      label: "death > 50 k",
       title: ""
     },
     x: margin.left,
-    y: margin.top + 5/11 * height ,
+    y: margin.top + 2.7/7.7 * height ,
     dy: 0,
     dx: 1000
   }
@@ -148,20 +148,24 @@ d3.select("#note")
 </script>
 
 
-<h1 class="tab"> 01-01-2022 US Covid Cases by 50 States </h1>
+<h1 class="tab"> 01-01-2022 US Covid Death Number by 50 States </h1>
 
 <h3 class="tab"> Bar Chart, checkbox to select soring in decending(select) or alphabetical(unselect) </h3>
   
 <p class="tab">
-	CA has the highest Covid case number. 
+	CA has the highest Covid death number. 
 </p>
 
 <p class="tab">
-	CA, TX, FL, and NY have over 3 M confirmed Covid cases. 
+	CA, TX, FL, and NY have over 50 k Covid death numbers. 
 </p>
 
+
 <p class="tab">
-  <input type="button" onclick="location.href='page2.html';" value="Continue to Page 2: Death Number" />
+  <input type="button" onclick="location.href='index.html';" value="Back to Page 1: Cases Number" />
+  <input type="button" onclick="location.href='page3.html';" value="Continue to Page 3: Deathrate" />
 </p>
 
 </body>
+
+
