--- a/page3.html
+++ b/page3.html
@@ -40,7 +40,7 @@ label {
 </style>
 <body onload='init()'>
 <svg width="1200" height="550" id="note"></svg>
-<label><input type="checkbox"> Cases Sort in Descending </label>
+<label><input type="checkbox"> Deathrate Sort in Descending </label>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
 <script>
@@ -57,22 +57,24 @@ var g = svg.append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 d3.csv("data2022.csv", function(d) {
-  d.cases = +d.cases;
+  d.deathrate = +d.deathrate;
   return d;
 }, function(error, data) {
   if (error) throw error;
 
   x.domain(data.map(function(d) { return d.state; }));
-  y.domain([0, d3.max(data, function(d) { return d.cases; })]);
+  y.domain([0, d3.max(data, function(d) { return d.deathrate; })]);
 
   g.append("g")
       .attr("class", "x axis")
       .attr("transform", "translate(0," + height + ")")
       .call(d3.axisBottom(x));
+  
+var formatPercent = d3.format(".1%");
 
   g.append("g")
       .attr("class", "y axis")
-      .call(d3.axisLeft(y).ticks(10))
+      .call(d3.axisLeft(y).ticks(12).tickFormat(formatPercent))
     .append("text")
       .attr("transform", "rotate(-90)")
       .attr("y", margin.left+20)
@@ -85,12 +87,13 @@ d3.csv("data2022.csv", function(d) {
     .enter().append("rect")
       .attr("class", "bar")
       .attr("x", function(d) { return x(d.state); })
-      .attr("y", function(d) { return y(d.cases); })
+      .attr("y", function(d) { return y(d.deathrate); })
       .attr("width", x.bandwidth())
-      .attr("height", function(d) { return height - y(d.cases); })
-      .append("title") 
-	  	.text((d) => `cases: ${d.cases}`); 
+      .attr("height", function(d) { return height - y(d.deathrate); })
+	  .append("title") 
+	  	.text((d) => `deathrate: ${d.deathrate}`);
 
+		
 d3.select("input").on("change", change);
 
 var sortTimeout = setTimeout(function() {
@@ -102,7 +105,7 @@ function change() {
 
   // Copy-on-write since tweens are evaluated after a delay.
   var x0 = x.domain(data.sort(this.checked
-      ? function(a, b) { return b.cases - a.cases; }
+      ? function(a, b) { return b.deathrate - a.deathrate; }
       : function(a, b) { return d3.ascending(a.state, b.state); })
       .map(function(d) { return d.state; }))
       .copy();
@@ -126,13 +129,13 @@ function change() {
 const annotations = [
   {
     note: {
-      label: "cases > 3 M",
+      label: " > 1%",
       title: ""
     },
     x: margin.left,
-    y: margin.top + 5/11 * height ,
+    y: margin.top + 4.8/10 * height ,
     dy: 0,
-    dx: 1000
+    dx: 1050
   }
 ]
 
@@ -148,20 +151,22 @@ d3.select("#note")
 </script>
 
 
-<h1 class="tab"> 01-01-2022 US Covid Cases by 50 States </h1>
+<h1 class="tab"> 01-01-2022 US Covid Deathrate by 50 States </h1>
 
 <h3 class="tab"> Bar Chart, checkbox to select soring in decending(select) or alphabetical(unselect) </h3>
   
 <p class="tab">
-	CA has the highest Covid case number. 
+	MS has the highest deathrate. 
 </p>
 
 <p class="tab">
-	CA, TX, FL, and NY have over 3 M confirmed Covid cases. 
+	Most of the states have over 1% deathrate. 
 </p>
 
+
 <p class="tab">
-  <input type="button" onclick="location.href='page2.html';" value="Continue to Page 2: Death Number" />
+  <input type="button" onclick="location.href='page2.html';" value="Back to Page 2: Death Number" />
 </p>
 
 </body>
+
