--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ label {
 }
 
 </style>
-<body onload='init()'>
+<body>
 <svg width="1200" height="550" id="note"></svg>
 <label><input type="checkbox"> Cases Sort in Descending </label>
 <script src="https://d3js.org/d3.v4.min.js"></script>
