--- a/page3.html
+++ b/page3.html
@@ -153,7 +153,7 @@ d3.select("#note")
 
 <h1 class="tab"> 01-01-2022 US Covid Deathrate by 50 States </h1>
 
-<h3 class="tab"> Bar Chart, checkbox to select soring in decending(select) or alphabetical(unselect) </h3>
+<h3 class="tab"> Bar Chart, checkbox to select soring in descending(select) or alphabetical(unselect) </h3>
   
 <p class="tab">
 	MS has the highest deathrate. 
