--- a/page2.html
+++ b/page2.html
@@ -150,7 +150,7 @@ d3.select("#note")
 
 <h1 class="tab"> 01-01-2022 US Covid Death Number by 50 States </h1>
 
-<h3 class="tab"> Bar Chart, checkbox to select soring in decending(select) or alphabetical(unselect) </h3>
+<h3 class="tab"> Bar Chart, checkbox to select soring in descending(select) or alphabetical(unselect) </h3>
   
 <p class="tab">
 	CA has the highest Covid death number. 
