--- a/page4.html
+++ b/page4.html
@@ -46,9 +46,9 @@ label {
 
 
 
-<h1 class="tab"> EV info including SoC and stranded energy</h1>
+<h1 class="tab"> Safe transport</h1>
 
-<h3 class="tab"> retrieve info from VIN or input, calculate SOC and stranded energy </h3>
+<h3 class="tab"> info from safe transport, guidelines </h3>
   
 <p class="tab">
 	TBD 
@@ -59,13 +59,12 @@ label {
 </p>
 
 <p class="tab">
-  <img src="Tesla_fig.jpg" alt="HTML5 Icon" style="width:800px;height:500px;"/>
+  <img src="Tesla_transport.png" alt="HTML5 Icon" style="width:800px;height:500px;"/>
 </p>
 
 
 
 <p class="tab">
-  <input type="button" onclick="location.href='page1.html';" value="Back to Page 1: structure and elecrical circuit" />
   <input type="button" onclick="location.href='page3.html';" value="Continue to Page 3: EV discharging power needed for 1 hour discharging with 50% SOC removal" />
 </p>
 
