--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ label {
 
 
 
-<h1 class="tab"> EV info including SoC and stranded energy</h1>
+<h1 class="tab"> Tesla 2022 structure and elecrical circuit</h1>
 
-<h3 class="tab"> retrieve info from VIN or input, calculate SOC and stranded energy </h3>
+<h3 class="tab"> add a fig. of Tesla to present circuit to avoid shock </h3>
   
 <p class="tab">
 	TBD 
@@ -59,16 +59,13 @@ label {
 </p>
 
 <p class="tab">
-  <img src="Tesla_fig.jpg" alt="HTML5 Icon" style="width:800px;height:500px;"/>
+  <img src="Tesla_structure.png" alt="HTML5 Icon" style="width:1000px;height:1000px;"/>
 </p>
-
 
 
 <p class="tab">
-  <input type="button" onclick="location.href='index.html';" value="Back to Page 1: structure and elecrical circuit" />
-  <input type="button" onclick="location.href='page3.html';" value="Continue to Page 3: EV discharging power needed for 1 hour discharging with 50% SOC removal" />
+  <input type="button" onclick="location.href='page2.html';" value="Continue to Page 2: EV info including SoC and stranded energy" />
 </p>
 
 </body>
-
 
